--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "node-red",
+    "name": "Pye-Asset-manager",
     "version": "4.1.1",
     "description": "Low-code programming for event-driven applications",
     "homepage": "https://nodered.org",
